<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/linearlayout"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp">

    <LinearLayout
        android:id = "@+id/relativeLayout1"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:background = "@color/colorAccent"
        android:layout_marginTop="@dimen/_40sdp"
        android:paddingLeft="@dimen/_10sdp"
        >


        <TextView
            android:layout_width ="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/parents"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_15sdp"
            />



        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/subc"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_15sdp"
            />



        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight ="1"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/action"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_15sdp"
            />
    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view"

        >
    </androidx.recyclerview.widget.RecyclerView>







</LinearLayout>